compiler/parser.c
// parser.c ??? Slag recursive descent parser
//
// Depends on: lexer.h, ast.h
//
// Public API (see parser.h):
//   Program parse_program(const char *src, size_t len);
//
// ---------------------------------------------------------------------
// Internal structure
// ---------------------------------------------------------------------
//
// The Parser struct wraps a Lexer and maintains a one-token lookahead
// (p->current). Helpers:
//
//   advance(p)          ??? consume current, load next token
//   check(p, type)      ??? true if current token is `type`
//   match(p, type)      ??? consume and return true if current == type
//   expect(p, type, msg)??? consume or emit error
//   error_at(p, msg)    ??? print error at current token position
//   copy_text(tok)      ??? heap-duplicate tok->text (caller owns)
//
// ---------------------------------------------------------------------
// Expression parsing
// ---------------------------------------------------------------------
//
// Expression grammar uses standard operator precedence.
// Arithmetic operators (+, -, *, /, %) work directly on expressions
// without requiring any special syntax wrapper.
//

#include <stdio.h>
#include <stdlib.h>
#include <string.h>
#include "lexer.h"
#include "ast.h"
#include "parser.h"

// ---------------------------------------------------------------------
// Parser state
// ---------------------------------------------------------------------

typedef struct {
    Lexer lexer;
    Token current;
    int had_error;
} Parser;

// ---------------------------------------------------------------------
// Helpers
// ---------------------------------------------------------------------

static char *copy_text(const Token *tok) {
    size_t len = strlen(tok->text);
    char *s = malloc(len + 1);
    memcpy(s, tok->text, len + 1);
    return s;
}

static void error_at(Parser *p, const char *msg) {
    fprintf(stderr, "parse error at line %d col %d: %s (got '%s')\n",
            p->current.line, p->current.col, msg, p->current.text);
    p->had_error = 1;
}

static void advance(Parser *p) {
    token_free(&p->current);
    p->current = lexer_next(&p->lexer);
}

static int check(Parser *p, TokenType type) {
    return p->current.type == type;
}

static int match(Parser *p, TokenType type) {
    if (p->current.type == type) {
        advance(p);
        return 1;
    }
    return 0;
}

static void expect(Parser *p, TokenType type, const char *msg) {
    if (p->current.type == type) {
        advance(p);
    } else {
        error_at(p, msg);
    }
}

// Returns 1 if the current token is a type keyword.
static int is_type_keyword(Parser *p) {
    switch (p->current.type) {
        case TOK_KW_INT:
        case TOK_KW_FLOAT:
        case TOK_KW_STR:
        case TOK_KW_BOOL:
        case TOK_KW_VOID:
            return 1;
        default:
            return 0;
    }
}

static Expr *parse_expr(Parser *p);
static Stmt *parse_stmt(Parser *p);
static Stmt *parse_lock(Parser *p);
static void parse_block(Parser *p, StmtList *out);

// ---------------------------------------------------------------------
// Argument list
// ---------------------------------------------------------------------

// Parse a comma-separated argument list until a closing token is reached.
// Does not consume the closing token.
static void parse_arg_list(Parser *p, ExprList *out) {
    exprlist_init(out);
    if (check(p, TOK_RPAREN)) {
        return;
    }
    for (;;) {
        Expr *arg = parse_expr(p);
        exprlist_push(out, arg);
        if (!match(p, TOK_COMMA)) {
            break;
        }
    }
}

// ---------------------------------------------------------------------
// Postfix
// ---------------------------------------------------------------------

// Parse postfix operations: function calls, indexing, member access, and
// member calls (e.g. window.open(...), errors[i], errors.len).
static Expr *parse_postfix(Parser *p, Expr *base) {
    for (;;) {
        if (check(p, TOK_LBRACKET)) {
            int line = p->current.line, col = p->current.col;
            advance(p); // [
            Expr *index = parse_expr(p);
            expect(p, TOK_RBRACKET, "expected ']' after array index");

            Expr *e = expr_new(EXPR_INDEX, line, col);
            e->as.index.base = base;
            e->as.index.index = index;
            base = e;
            continue;
        }

        if (check(p, TOK_DOT)) {
            int line = p->current.line, col = p->current.col;
            advance(p); // .

            if (!check(p, TOK_IDENT) &&
                !(check(p, TOK_KW_WINDOW) || check(p, TOK_KW_PIXEL) ||
                  check(p, TOK_KW_FLUSH))) {
                error_at(p, "expected identifier after '.'");
                return base;
            }

            char *member = copy_text(&p->current);
            advance(p);

            if (check(p, TOK_LPAREN)) {
                advance(p); // (
                ExprList args;
                parse_arg_list(p, &args);
                expect(p, TOK_RPAREN, "expected ')' after arguments");

                Expr *e = expr_new(EXPR_MEMBER_CALL, line, col);
                e->as.member_call.base = base;
                e->as.member_call.member = member;
                e->as.member_call.args = args;
                base = e;
            } else {
                Expr *e = expr_new(EXPR_MEMBER, line, col);
                e->as.member.base = base;
                e->as.member.member = member;
                base = e;
            }
            continue;
        }

        break;
    }
    return base;
}

// ---------------------------------------------------------------------
// Primary
// ---------------------------------------------------------------------

// Parse a primary expression: literals, identifiers,
// parenthesized expressions, and function calls.
static Expr *parse_primary(Parser *p) {
    int line = p->current.line, col = p->current.col;

    if (check(p, TOK_INT_LIT)) {
        Expr *e = expr_new(EXPR_INT_LIT, line, col);
        e->as.int_val = p->current.int_val;
        advance(p);
        return parse_postfix(p, e);
    }

    if (check(p, TOK_FLOAT_LIT)) {
        Expr *e = expr_new(EXPR_FLOAT_LIT, line, col);
        e->as.float_val = p->current.float_val;
        advance(p);
        return parse_postfix(p, e);
    }

    if (check(p, TOK_STR_LIT)) {
        Expr *e = expr_new(EXPR_STR_LIT, line, col);
        e->as.str.value = copy_text(&p->current);
        advance(p);
        return parse_postfix(p, e);
    }

    if (check(p, TOK_REGEX_LIT)) {
        Expr *e = expr_new(EXPR_REGEX_LIT, line, col);
        e->as.str.value = copy_text(&p->current);
        advance(p);
        return e; // regex literals are not indexable/callable
    }

    if (check(p, TOK_KW_TRUE) || check(p, TOK_KW_FALSE)) {
        Expr *e = expr_new(EXPR_BOOL_LIT, line, col);
        e->as.bool_val = check(p, TOK_KW_TRUE) ? 1 : 0;
        advance(p);
        return parse_postfix(p, e);
    }

    // Parenthesized expression: ( expr )
    if (check(p, TOK_LPAREN)) {
        advance(p); // (
        Expr *inner = parse_expr(p);
        expect(p, TOK_RPAREN, "expected ')' after expression");
        return parse_postfix(p, inner);
    }

    // Bare identifier: variable reference or function call.
    // Also handle window/pixel/flush used as base expressions.
    if (check(p, TOK_IDENT) || check(p, TOK_KW_WINDOW) ||
        check(p, TOK_KW_PIXEL) || check(p, TOK_KW_FLUSH)) {

        char *name = copy_text(&p->current);
        advance(p);

        if (check(p, TOK_LPAREN)) {
            advance(p); // (
            ExprList args;
            parse_arg_list(p, &args);
            expect(p, TOK_RPAREN, "expected ')' after arguments");

            Expr *e = expr_new(EXPR_CALL, line, col);
            e->as.call.name = name;
            e->as.call.args = args;
            return parse_postfix(p, e);
        }

        Expr *e = expr_new(EXPR_IDENT, line, col);
        e->as.str.value = name;
        return parse_postfix(p, e);
    }

    error_at(p, "expected expression");
    // Error recovery: return a dummy node and try to advance.
    Expr *e = expr_new(EXPR_INT_LIT, line, col);
    e->as.int_val = 0;
    if (!check(p, TOK_EOF)) advance(p);
    return e;
}

// ---------------------------------------------------------------------
// Precedence chain
// ---------------------------------------------------------------------

// Unary: !expr, -expr
static Expr *parse_unary(Parser *p) {
    if (check(p, TOK_NOT) || check(p, TOK_MINUS)) {
        int line = p->current.line, col = p->current.col;
        TokenType op = p->current.type;
        advance(p);
        Expr *operand = parse_unary(p);

        Expr *e = expr_new(EXPR_UNARY, line, col);
        e->as.unary.op = op;
        e->as.unary.operand = operand;
        return e;
    }
    return parse_primary(p);
}

// Multiplicative: * / %
static Expr *parse_multiplicative(Parser *p) {
    Expr *left = parse_unary(p);
    while (check(p, TOK_STAR) || check(p, TOK_SLASH) || check(p, TOK_PERCENT)) {
        int line = p->current.line, col = p->current.col;
        TokenType op = p->current.type;
        advance(p);
        Expr *right = parse_unary(p);

        Expr *e = expr_new(EXPR_BINARY, line, col);
        e->as.binary.op = op;
        e->as.binary.left = left;
        e->as.binary.right = right;
        left = e;
    }
    return left;
}

// Additive: + -
static Expr *parse_additive(Parser *p) {
    Expr *left = parse_multiplicative(p);
    while (check(p, TOK_PLUS) || check(p, TOK_MINUS)) {
        int line = p->current.line, col = p->current.col;
        TokenType op = p->current.type;
        advance(p);
        Expr *right = parse_multiplicative(p);

        Expr *e = expr_new(EXPR_BINARY, line, col);
        e->as.binary.op = op;
        e->as.binary.left = left;
        e->as.binary.right = right;
        left = e;
    }
    return left;
}

// Relational: < > <= >=
static Expr *parse_relational(Parser *p) {
    Expr *left = parse_additive(p);
    while (check(p, TOK_LT) || check(p, TOK_GT) ||
           check(p, TOK_LE) || check(p, TOK_GE)) {
        int line = p->current.line, col = p->current.col;
        TokenType op = p->current.type;
        advance(p);
        Expr *right = parse_additive(p);

        Expr *e = expr_new(EXPR_BINARY, line, col);
        e->as.binary.op = op;
        e->as.binary.left = left;
        e->as.binary.right = right;
        left = e;
    }
    return left;
}

// Equality: == !=
static Expr *parse_equality(Parser *p) {
    Expr *left = parse_relational(p);
    while (check(p, TOK_EQ) || check(p, TOK_NEQ)) {
        int line = p->current.line, col = p->current.col;
        TokenType op = p->current.type;
        advance(p);
        Expr *right = parse_relational(p);

        Expr *e = expr_new(EXPR_BINARY, line, col);
        e->as.binary.op = op;
        e->as.binary.left = left;
        e->as.binary.right = right;
        left = e;
    }
    return left;
}

// Logical AND: &&
static Expr *parse_logical_and(Parser *p) {
    Expr *left = parse_equality(p);
    while (check(p, TOK_AND)) {
        int line = p->current.line, col = p->current.col;
        advance(p);
        Expr *right = parse_equality(p);

        Expr *e = expr_new(EXPR_LOGICAL, line, col);
        e->as.logical.op = TOK_AND;
        e->as.logical.left = left;
        e->as.logical.right = right;
        left = e;
    }
    return left;
}

// Logical XOR: ^^  (precedence between || and &&, like C's ^ )
static Expr *parse_logical_xor(Parser *p) {
    Expr *left = parse_logical_and(p);
    while (check(p, TOK_XOR)) {
        int line = p->current.line, col = p->current.col;
        advance(p);
        Expr *right = parse_logical_and(p);

        Expr *e = expr_new(EXPR_LOGICAL, line, col);
        e->as.logical.op = TOK_XOR;
        e->as.logical.left = left;
        e->as.logical.right = right;
        left = e;
    }
    return left;
}

// Logical OR: ||
static Expr *parse_logical_or(Parser *p) {
    Expr *left = parse_logical_xor(p);
    while (check(p, TOK_OR)) {
        int line = p->current.line, col = p->current.col;
        advance(p);
        Expr *right = parse_logical_xor(p);

        Expr *e = expr_new(EXPR_LOGICAL, line, col);
        e->as.logical.op = TOK_OR;
        e->as.logical.left = left;
        e->as.logical.right = right;
        left = e;
    }
    return left;
}

// Top-level expression entry point.
static Expr *parse_expr(Parser *p) {
    return parse_logical_or(p);
}

// ---------------------------------------------------------------------
// Statement parsing
// ---------------------------------------------------------------------

// Parse the body of a block: zero or more statements until '}'.
// Does not consume the closing '}'.
static void parse_block(Parser *p, StmtList *out) {
    stmtlist_init(out);
    while (!check(p, TOK_RBRACE) && !check(p, TOK_EOF)) {
        Stmt *s = parse_stmt(p);
        if (s) stmtlist_push(out, s);
    }
}

// ---------------------------------------------------------------------
// global declaration
//
// global TYPE name = expr;
// ---------------------------------------------------------------------
static Stmt *parse_global_decl(Parser *p) {
    int line = p->current.line, col = p->current.col;
    advance(p); // consume 'global'

    if (!is_type_keyword(p)) {
        error_at(p, "expected type keyword after 'global'");
        return NULL;
    }

    SlagType base_type = slag_type_from_token(p->current.type);
    advance(p); // consume type keyword

    // Global array declaration: global TYPE[n] name = { ... }
    if (check(p, TOK_LBRACKET)) {
        advance(p); // [

        Expr *size_expr = NULL;
        if (!check(p, TOK_RBRACKET)) {
            size_expr = parse_expr(p);
        }
        expect(p, TOK_RBRACKET, "expected ']' after array size");

        if (!check(p, TOK_IDENT)) {
            error_at(p, "expected array name");
            return NULL;
        }
        char *name = copy_text(&p->current);
        advance(p);

        expect(p, TOK_ASSIGN, "expected '=' in global array declaration");

        Stmt *s = stmt_new(STMT_ARRAY_DECL, line, col);
        s->as.array_decl.elem_type = base_type;
        s->as.array_decl.name = name;
        s->as.array_decl.size_expr = size_expr;
        exprlist_init(&s->as.array_decl.init_list);
        s->as.array_decl.init_call = NULL;
        s->as.array_decl.is_global = 1;

        if (check(p, TOK_LBRACE)) {
            advance(p); // {
            if (!check(p, TOK_RBRACE)) {
                for (;;) {
                    Expr *elem = parse_expr(p);
                    exprlist_push(&s->as.array_decl.init_list, elem);
                    if (!match(p, TOK_COMMA)) break;
                    if (check(p, TOK_RBRACE)) break;
                }
            }
            expect(p, TOK_RBRACE, "expected '}' after array initializer");
        } else {
            s->as.array_decl.init_call = parse_expr(p);
        }

        expect(p, TOK_SEMICOLON, "expected ';' after global array declaration");
        return s;
    }

    // Global scalar declaration
    if (!check(p, TOK_IDENT)) {
        error_at(p, "expected variable name");
        return NULL;
    }
    char *name = copy_text(&p->current);
    advance(p);

    expect(p, TOK_ASSIGN, "expected '=' in global declaration");

    Expr *init = parse_expr(p);
    expect(p, TOK_SEMICOLON, "expected ';' after global declaration");

    Stmt *s = stmt_new(STMT_GLOBAL_DECL, line, col);
    s->as.var_decl.type = base_type;
    s->as.var_decl.name = name;
    s->as.var_decl.init = init;
    return s;
}

// ---------------------------------------------------------------------
// local declaration
//
// local TYPE name = expr;
// ---------------------------------------------------------------------
static Stmt *parse_local_decl(Parser *p) {
    int line = p->current.line, col = p->current.col;
    advance(p); // consume 'local'

    if (!is_type_keyword(p)) {
        error_at(p, "expected type keyword after 'local'");
        return NULL;
    }

    SlagType base_type = slag_type_from_token(p->current.type);
    advance(p); // consume type keyword

    // Local array declaration: local TYPE[] name = { ... }
    if (check(p, TOK_LBRACKET)) {
        advance(p); // [

        Expr *size_expr = NULL;
        if (!check(p, TOK_RBRACKET)) {
            size_expr = parse_expr(p);
        }
        expect(p, TOK_RBRACKET, "expected ']' after array size");

        if (!check(p, TOK_IDENT)) {
            error_at(p, "expected array name");
            return NULL;
        }
        char *name = copy_text(&p->current);
        advance(p);

        expect(p, TOK_ASSIGN, "expected '=' in local array declaration");

        Stmt *s = stmt_new(STMT_ARRAY_DECL, line, col);
        s->as.array_decl.elem_type = base_type;
        s->as.array_decl.name = name;
        s->as.array_decl.size_expr = size_expr;
        exprlist_init(&s->as.array_decl.init_list);
        s->as.array_decl.init_call = NULL;
        s->as.array_decl.is_global = 0;

        if (check(p, TOK_LBRACE)) {
            advance(p); // {
            if (!check(p, TOK_RBRACE)) {
                for (;;) {
                    Expr *elem = parse_expr(p);
                    exprlist_push(&s->as.array_decl.init_list, elem);
                    if (!match(p, TOK_COMMA)) break;
                    if (check(p, TOK_RBRACE)) break;
                }
            }
            expect(p, TOK_RBRACE, "expected '}' after array initializer");
        } else {
            s->as.array_decl.init_call = parse_expr(p);
        }

        expect(p, TOK_SEMICOLON, "expected ';' after local array declaration");
        return s;
    }

    if (!check(p, TOK_IDENT)) {
        error_at(p, "expected variable name");
        return NULL;
    }
    char *name = copy_text(&p->current);
    advance(p);

    expect(p, TOK_ASSIGN, "expected '=' in local declaration");

    Expr *init = parse_expr(p);
    expect(p, TOK_SEMICOLON, "expected ';' after local declaration");

    Stmt *s = stmt_new(STMT_LOCAL_DECL, line, col);
    s->as.var_decl.type = base_type;
    s->as.var_decl.name = name;
    s->as.var_decl.init = init;
    return s;
}

// ---------------------------------------------------------------------
// Assignment or expression statement
//
// After seeing an identifier (or window/pixel), we may have:
//   name = expr;           STMT_ASSIGN  (plain variable)
//   name[idx] = expr;      STMT_ASSIGN  (array element)
//   name(args);            STMT_EXPR    (function call)
//   name.member(args);     STMT_EXPR    (member call)
//
// We parse an expression starting from the identifier and then decide:
// if the result is followed by '=' it's an assignment, otherwise it's
// an expression statement.
// ---------------------------------------------------------------------
static Stmt *parse_assign_or_expr(Parser *p) {
    int line = p->current.line, col = p->current.col;

    Expr *lhs = parse_expr(p);

    // Post-increment / -decrement statement: `name++;` / `name--;`
    // Desugars to `name = name +/- 1;`. Only a plain identifier target is
    // supported (matches C's common counter idiom).
    if (check(p, TOK_INC) || check(p, TOK_DEC)) {
        int is_inc = check(p, TOK_INC);
        advance(p); // ++ or --
        expect(p, TOK_SEMICOLON, "expected ';' after '++' / '--'");
        if (lhs->kind != EXPR_IDENT) {
            fprintf(stderr, "parse error at line %d: '++'/'--' requires a simple variable\n", line);
            p->had_error = 1;
        }
        Expr *cur = expr_new(EXPR_IDENT, line, col);
        cur->as.str.value = lhs->kind == EXPR_IDENT ? ast_strdup(lhs->as.str.value) : NULL;
        Expr *one = expr_new(EXPR_INT_LIT, line, col);
        one->as.int_val = 1;
        Expr *bin = expr_new(EXPR_BINARY, line, col);
        bin->as.binary.op = is_inc ? TOK_PLUS : TOK_MINUS;
        bin->as.binary.left = cur;
        bin->as.binary.right = one;
        Stmt *s = stmt_new(STMT_ASSIGN, line, col);
        s->as.assign.target = lhs;
        s->as.assign.value = bin;
        return s;
    }

    if (check(p, TOK_ASSIGN)) {
        advance(p); // =
        Expr *rhs = parse_expr(p);
        expect(p, TOK_SEMICOLON, "expected ';' after assignment");

        // Validate LHS: must be an ident, index, or member.
        if (lhs->kind != EXPR_IDENT && lhs->kind != EXPR_INDEX &&
            lhs->kind != EXPR_MEMBER) {
            fprintf(stderr, "parse error at line %d: invalid assignment target\n", line);
            p->had_error = 1;
        }

        Stmt *s = stmt_new(STMT_ASSIGN, line, col);
        s->as.assign.target = lhs;
        s->as.assign.value = rhs;
        return s;
    }

    // Expression statement (e.g. a function call used for its side effects).
    expect(p, TOK_SEMICOLON, "expected ';' after expression statement");

    Stmt *s = stmt_new(STMT_EXPR, line, col);
    s->as.expr_stmt.expr = lhs;
    return s;
}

// ---------------------------------------------------------------------
// if statement
//
// if (cond) { ... }
// if (cond) { ... } else { ... }
// if (cond) { ... } else if (cond) { ... }    <- desugars to else { if ... }
// ---------------------------------------------------------------------
static Stmt *parse_if(Parser *p) {
    int line = p->current.line, col = p->current.col;
    advance(p); // consume 'if'

    expect(p, TOK_LPAREN, "expected '(' after 'if'");
    Expr *cond = parse_expr(p);
    expect(p, TOK_RPAREN, "expected ')' after if condition");

    expect(p, TOK_LBRACE, "expected '{' to open if body");
    StmtList then_body;
    parse_block(p, &then_body);
    expect(p, TOK_RBRACE, "expected '}' to close if body");

    Stmt *s = stmt_new(STMT_IF, line, col);
    s->as.if_stmt.cond = cond;
    s->as.if_stmt.then_body = then_body;
    stmtlist_init(&s->as.if_stmt.else_body);
    s->as.if_stmt.has_else = 0;

    if (match(p, TOK_KW_ELSE)) {
        s->as.if_stmt.has_else = 1;

        if (check(p, TOK_KW_IF)) {
            // else if: wrap the inner if as a single stmt in the else body.
            Stmt *inner = parse_if(p);
            stmtlist_push(&s->as.if_stmt.else_body, inner);
        } else {
            expect(p, TOK_LBRACE, "expected '{' to open else body");
            parse_block(p, &s->as.if_stmt.else_body);
            expect(p, TOK_RBRACE, "expected '}' to close else body");
        }
    }

    return s;
}

// ---------------------------------------------------------------------
// for statement  (three surface forms, all desugared to existing nodes)
//
//   C-style:     for (init ; cond ; post) { body }
//   Range-decl:  for (local TYPE i = a ; cond) { body }   (no post clause)
//   Count:       for i in a .. b { body }
//
// Each lowers to a STMT_BLOCK wrapping an optional init/decl followed by a
// STMT_WHILE. STMT_BLOCK codegen is a bare emit_stmtlist (no scope push,
// locals are function-flat), so the emitted asm is byte-for-byte what a
// hand-written `while`-with-counter produces ??? no new codegen, no runtime
// cost.
// ---------------------------------------------------------------------

// Parse the init clause of a paren-form for, WITHOUT consuming the trailing
// ';'. Accepts a local decl (local TYPE name = expr) or a plain assignment
// (name = expr), mirroring parse_local_decl / parse_assign_or_expr.
static Stmt *parse_for_init(Parser *p) {
    int line = p->current.line, col = p->current.col;

    // A for-init that begins with `local` or directly with a type keyword is
    // a declaration; the `local` keyword is optional here (for-scoped).
    if (check(p, TOK_KW_LOCAL) || is_type_keyword(p)) {
        if (check(p, TOK_KW_LOCAL)) advance(p); // optional 'local'
        if (!is_type_keyword(p)) {
            error_at(p, "expected type keyword in for-init declaration");
            return NULL;
        }
        SlagType t = slag_type_from_token(p->current.type);
        advance(p);
        if (!check(p, TOK_IDENT)) {
            error_at(p, "expected variable name in for-init");
            return NULL;
        }
        char *name = copy_text(&p->current);
        advance(p);
        expect(p, TOK_ASSIGN, "expected '=' in for-init declaration");
        Stmt *s = stmt_new(STMT_LOCAL_DECL, line, col);
        s->as.var_decl.type = t;
        s->as.var_decl.name = name;
        s->as.var_decl.init = parse_expr(p);
        return s;
    }

    Expr *lhs = parse_expr(p);
    expect(p, TOK_ASSIGN, "expected '=' in for-init assignment");
    Expr *rhs = parse_expr(p);
    if (lhs->kind != EXPR_IDENT && lhs->kind != EXPR_INDEX &&
        lhs->kind != EXPR_MEMBER) {
        error_at(p, "invalid for-init assignment target");
    }
    Stmt *s = stmt_new(STMT_ASSIGN, line, col);
    s->as.assign.target = lhs;
    s->as.assign.value = rhs;
    return s;
}

// Desugar `IDENT++` / `IDENT--` into `IDENT = IDENT +/- 1`. `name` is the
// (already parsed) target token; consumes the TOK_INC/TOK_DEC.
static Stmt *make_incdec(Parser *p, char *name, int is_inc, int line, int col) {
    advance(p); // consume ++ or --
    Expr *tgt = expr_new(EXPR_IDENT, line, col);
    tgt->as.str.value = name;              // takes ownership of the dup'd name
    Expr *cur = expr_new(EXPR_IDENT, line, col);
    cur->as.str.value = ast_strdup(name);
    Expr *one = expr_new(EXPR_INT_LIT, line, col);
    one->as.int_val = 1;
    Expr *bin = expr_new(EXPR_BINARY, line, col);
    bin->as.binary.op = is_inc ? TOK_PLUS : TOK_MINUS;
    bin->as.binary.left = cur;
    bin->as.binary.right = one;
    Stmt *s = stmt_new(STMT_ASSIGN, line, col);
    s->as.assign.target = tgt;
    s->as.assign.value = bin;
    return s;
}

// Parse the post clause WITHOUT consuming the trailing ')'. Accepts either an
// assignment (name = expr) or a post-increment/decrement (name++ / name--).
static Stmt *parse_for_post(Parser *p) {
    int line = p->current.line, col = p->current.col;

    // Fast path: bare `IDENT++` / `IDENT--`. Duplicate the identifier text
    // BEFORE advancing ? advance() frees the current token's storage.
    if (check(p, TOK_IDENT)) {
        char *name = copy_text(&p->current);
        advance(p); // IDENT
        if (check(p, TOK_INC)) return make_incdec(p, name, 1, line, col);
        if (check(p, TOK_DEC)) return make_incdec(p, name, 0, line, col);
        // Not ++/-- : it was a plain assignment target; finish it below.
        Expr *lhs = expr_new(EXPR_IDENT, line, col);
        lhs->as.str.value = name;              // takes ownership of the dup
        lhs = parse_postfix(p, lhs); // allow name[idx] / name.member
        expect(p, TOK_ASSIGN, "expected '=', '++' or '--' in for-post clause");
        Expr *rhs = parse_expr(p);
        if (lhs->kind != EXPR_IDENT && lhs->kind != EXPR_INDEX &&
            lhs->kind != EXPR_MEMBER) {
            error_at(p, "invalid for-post assignment target");
        }
        Stmt *s = stmt_new(STMT_ASSIGN, line, col);
        s->as.assign.target = lhs;
        s->as.assign.value = rhs;
        return s;
    }

    Expr *lhs = parse_expr(p);
    expect(p, TOK_ASSIGN, "expected '=' in for-post assignment");
    Expr *rhs = parse_expr(p);
    if (lhs->kind != EXPR_IDENT && lhs->kind != EXPR_INDEX &&
        lhs->kind != EXPR_MEMBER) {
        error_at(p, "invalid for-post assignment target");
    }
    Stmt *s = stmt_new(STMT_ASSIGN, line, col);
    s->as.assign.target = lhs;
    s->as.assign.value = rhs;
    return s;
}

// Wrap [init] + while(cond){body}[post] in a STMT_BLOCK and return it.
// `post` (may be NULL) is the loop-step statement; codegen runs it at the end
// of each iteration AND makes it the target of `continue`.
static Stmt *for_wrap(Stmt *init, Expr *cond, StmtList body, Stmt *post,
                      int line, int col) {
    // An omitted condition is an always-true loop: synthesize the constant 1
    // so STMT_WHILE codegen tests a nonzero value each iteration (ISO C rule).
    if (!cond) {
        cond = expr_new(EXPR_INT_LIT, line, col);
        cond->as.int_val = 1;
    }
    Stmt *wh = stmt_new(STMT_WHILE, line, col);
    wh->as.while_stmt.cond = cond;
    wh->as.while_stmt.body = body;
    wh->as.while_stmt.post = post;

    Stmt *blk = stmt_new(STMT_BLOCK, line, col);
    stmtlist_init(&blk->as.block.body);
    if (init) stmtlist_push(&blk->as.block.body, init);
    stmtlist_push(&blk->as.block.body, wh);
    return blk;
}
